# img_tab_classification_codex

./: .gitignore  README.md  plan.md  pyproject.toml
configs/: wl_residual_catboost_fusion.yaml
data/: README.md
docs/: experiment_overview.md  experiment_plan.md  fbm_domain_notes.md  fusion_eval_quickstart.md  multimodal_fusion_guide.md  real_dataset_quickstart.md  real_dataset_roo_refactor_guide.md  wl_residual_catboost_fusion.md
examples/: fusion_eval_example.py  run_fusion_experiment.py
notebooks/: model_architecture_and_eval_briefing.ipynb
reports/: fusion_experiment_report.md  fusion_predictions.csv  fusion_report.json  fusion_report.md  training_history.csv
src/fbm_multimodal/: __init__.py  active_learning.py  baselines.py  cli.py  condition_eval.py  eds_mapping.py  features.py  image.py  manifest.py  measurement.py  metrics.py  synthetic.py  synthetic_wl_map.py  wl_residual_map.py
src/fbm_multimodal/fusion/: __init__.py  __main__.py  data.py  fbm_patterns.py  fusion_eval.py  model.py  real_data.py  visualize.py
src/fbm_multimodal/pseudo_labeling/: __init__.py  pairwise_topk.py
src/fbm_multimodal/training/: __init__.py  train_catboost_oof.py
tests/: test_catboost_oof.py  test_cli.py  test_condition_eval.py  test_eds_mapping.py  test_fbm_patterns.py  test_features_and_baselines.py  test_fusion_eval.py  test_fusion_model.py  test_image_processing.py  test_manifest_and_metrics.py  test_measurement_mapping.py  test_pseudo_labeling.py  test_real_data_loader.py  test_synthetic_and_active_learning.py  test_wl_residual_map.py
